# libaeon

./: .clang-tidy  .gitignore  .gitmodules  CMakeLists.txt  LICENSE  README.md  bootstrap_xcode.sh  conanfile.py  remotes.json  tidy.sh
src/common/: CMakeLists.txt
src/common/private/: base64.cpp  commandline_parser.cpp  dynamic_library.cpp  from_chars.cpp  hexdump.cpp  lexical_parse.cpp  string_utils.cpp  uuid.cpp
src/common/public/aeon/common/: assert.h  base64.h  bits.h  bom.h  color.h  color_limits.h  commandline_parser.h  compilers.h  concepts.h  container.h  delay.h  dispatcher.h  dispatcher_fwd.h  dynamic_library.h  element_type.h  endianness.h  expect.h  fence.h  flags.h  fmtflags.h  fourcc.h  from_chars.h  hash.h  hexdump.h  intrusive_ptr.h  lexical_parse.h  listener_subject.h  memory.h  parallelizer.h  parameters.h  path.h  pmr.h  preprocessor.h  scope_guard.h  signals.h  signed_sizeof.h  singleton.h  string.h  string_concepts.h  string_literal.h  (+13 more)
src/common/tests/: CMakeLists.txt
src/common/tests/test_libaeon_common/: test_base64.cpp  test_bits.cpp  test_buffer.cpp  test_color.cpp  test_commandline_parser.cpp  test_container.cpp  test_dispatcher.cpp  test_element_type.cpp  test_endianness.cpp  test_flags.cpp  test_from_chars.cpp  test_general_tree.cpp  test_hash.cpp  test_intrusive_ptr.cpp  test_lexical_parse.cpp  test_path.cpp  test_pmr.cpp  test_scope_guard.cpp  test_signals.cpp  test_singleton.cpp  test_string_literal.cpp  test_string_table.cpp  test_string_utils.cpp  test_stringtraits.cpp  test_tribool.cpp  test_type_traits.cpp  test_unique_obj.cpp  test_unordered_flatmap.cpp  test_unordered_flatset.cpp  test_uuid.cpp  test_version.cpp
src/compression/: CMakeLists.txt
src/compression/private/: zlib.cpp
src/compression/tests/: CMakeLists.txt
src/compression/tests/test_libaeon_compression/: test_zlib_filter.cpp
src/crypto/: CMakeLists.txt
src/crypto/private/: sha256.cpp
src/crypto/public/aeon/crypto/: sha256.h
src/crypto/tests/: CMakeLists.txt
src/fonts/: CMakeLists.txt
src/fonts/private/: face_wrapper.cpp
src/fonts/tests/: CMakeLists.txt
src/fonts/tests/test_libaeon_fonts/: test_fonts.cpp
src/imaging/: CMakeLists.txt
src/imaging/private/file/: bmp_file.cpp  file.cpp  jpg_file.cpp  png_file.cpp
src/imaging/public/aeon/imaging/: format.h  image.h  image_view.h
src/imaging/tests/: CMakeLists.txt
src/imaging/tests/test_libaeon_imaging/: test_file_bmp.cpp
src/logger/: CMakeLists.txt
src/logger/private/: base_backend.cpp  io_stream_sink.cpp  multithreaded_sink_backend.cpp  simple_backend.cpp  simple_sink_backend.cpp  stream_sink.cpp
src/logger/public/aeon/logger/: base_backend.h  io_stream_sink.h  log_sink.h  logger.h  multithreaded_sink_backend.h  simple_backend.h  simple_sink_backend.h  stream_sink.h
src/math/: CMakeLists.txt
src/math/benchmarks/: CMakeLists.txt
src/math/private/: simplex_noise.cpp
src/math/public/aeon/math/: circle.h  circle_stream.h  hash.h  line_segment2d.h  line_segment3d.h  mat.h  mat3.h  mat4.h  mat_view.h  math.h  math_fwd.h  plane.h  plane_stream.h  quaternion.h  ray3d.h  ray3d_stream.h  rectangle.h  rectangle_stream.h  size2d.h  size2d_stream.h  size3d.h  size3d_stream.h  swizzle_vector.h  vector2.h  vector2_stream.h  vector3.h  vector3_stream.h  vector4.h  vector4_stream.h
src/math/tests/: CMakeLists.txt
src/math/tests/test_libaeon_math/: test_mat.cpp  test_mat_view.cpp
src/platform/: CMakeLists.txt  platform_config.h.in
src/platform/example/: CMakeLists.txt
src/platform/example/private/: main.cpp
src/platform/private/: base_context.cpp
src/platform/private/common/: base_context.cpp  base_context.h  base_window.cpp  base_window.h
src/platform/public/aeon/platform/: context.h  exception.h  window.h  window_create_info.h
src/plugins/: CMakeLists.txt
src/plugins/private/: plugin_loader.cpp
src/plugins/public/aeon/plugins/: plugin_loader.h
src/plugins/tests/: CMakeLists.txt
src/plugins/tests/plugins/: CMakeLists.txt
src/plugins/tests/plugins/public/: itestplugin1.h
src/ptree/: CMakeLists.txt
src/ptree/private/: reflection.cpp
src/ptree/private/serialization/: serialization_abf.cpp  serialization_ini.cpp  serialization_json.cpp  serialization_xml.cpp
src/ptree/private/xml_dom/: xml_document.cpp  xml_node.cpp
src/ptree/public/aeon/ptree/: config_file.h  ptree.h  reflection.h
src/ptree/tests/: CMakeLists.txt
src/ptree/tests/test_libaeon_ptree/: test_blob.cpp  test_config_file.cpp  test_ini.cpp  test_ptree.cpp  test_reflection.cpp  test_xml.cpp
src/sockets/: CMakeLists.txt
src/sockets/tests/: CMakeLists.txt
src/streams/: CMakeLists.txt
src/streams/tests/: CMakeLists.txt
src/streams/tests/test_libaeon_streams/: test_buffer_filter.cpp  test_circular_buffer_filter.cpp  test_memory_device.cpp  test_stream_reader.cpp  test_stream_writer.cpp  test_streams.cpp  test_uuid_stream.cpp
src/unicode/: CMakeLists.txt
src/unicode/private/: encoding.cpp  stringutils.cpp  utf16_iterator.cpp  utf8_iterator.cpp
src/unicode/tests/: CMakeLists.txt
src/unicode/tests/test_libaeon_unicode/: test_encoding.cpp
src/vulkan/: CMakeLists.txt
src/vulkan/example/: CMakeLists.txt
src/vulkan/example/private/: main.cpp
src/vulkan/private/: buffer.cpp  command_buffer_ref.cpp  command_pool.cpp  debug.cpp  device.cpp  extension.cpp  framebuffer.cpp  image.cpp  instance.cpp  layer.cpp  physical_device.cpp  queue.cpp  render_pass.cpp  render_pass_description.cpp  subpass.cpp
src/vulkan/tests/: CMakeLists.txt
src/vulkan/tests/test_libaeon_vulkan/: test_instance.cpp
src/vulkan/vma/: CMakeLists.txt
src/web/: CMakeLists.txt
src/web/private/http/: http_client_socket.cpp  http_jsonrpc_route.cpp  http_server_session.cpp  http_server_socket.cpp  method.cpp  reply.cpp  request.cpp  routable_http_server_session.cpp  routable_http_server_socket.cpp  static_route.cpp  url_encoding.cpp  validators.cpp
src/web/private/jsonrpc/: method.cpp  result.cpp  server.cpp
src/web/tests/: CMakeLists.txt
src/web/tests/test_libaeon_web/: test_sockets.cpp  test_url_encoding.cpp
(+176 files in other folders)
